--- a/src/back/auth-service/Dockerfile
+++ b/src/back/auth-service/Dockerfile
@@ -32,7 +32,10 @@ COPY --from=builder /app/node_modules ./node_modules
 COPY .env .env
 
 # Указываем порт, который будет использоваться
-EXPOSE 3001
+EXPOSE 3000
 
 # Устанавливаем команду запуска приложения
 CMD ["node", "dist/main"]
+
+# docker build -t my-nest-app .
+#docker run -d -p 3000:3000 --env-file .env my-nest-app
