added signin and  signup

--- a/src/back/auth-service/Dockerfile
+++ b/src/back/auth-service/Dockerfile
@@ -1,6 +1,9 @@
 # Указываем базовый образ
 FROM node:18-alpine AS builder
 
+# Устанавливаем необходимые зависимости
+RUN apk add --no-cache openssl bash libc6-compat
+
 # Устанавливаем рабочую директорию
 WORKDIR /app
 
@@ -13,11 +16,17 @@ RUN npm install
 # Копируем исходный код приложения
 COPY . .
 
-# Компилируем TypeScript в JavaScript
+# Генерация Prisma Client
+RUN npx prisma generate
+
+# Компиляция TypeScript в JavaScript
 RUN npm run build
 
 # Указываем второй этап для уменьшения размера образа
 FROM node:18-alpine AS runtime
+
+# Устанавливаем необходимые зависимости
+RUN apk add --no-cache openssl bash libc6-compat
 
 # Устанавливаем рабочую директорию
 WORKDIR /app
@@ -25,17 +34,16 @@ WORKDIR /app
 # Копируем файлы сборки из предыдущего этапа
 COPY --from=builder /app/dist ./dist
 
-# Копируем зависимости (для работы приложения в продакшене)
+# Копируем зависимости
 COPY --from=builder /app/node_modules ./node_modules
 
-# Копируем файл .env
+# Копируем файл .env и Prisma Schema
 COPY .env .env
+COPY prisma ./prisma
+
 
 # Указываем порт, который будет использоваться
 EXPOSE 3000
 
 # Устанавливаем команду запуска приложения
 CMD ["node", "dist/main"]
-
-# docker build -t my-nest-app .
-#docker run -d -p 3000:3000 --env-file .env my-nest-app
