--- a/src/back/auth-service/.env
+++ b/src/back/auth-service/.env
@@ -1,2 +1,2 @@
-DATABASE_URL="postgres://default:QHqji86FATgc@ep-mute-dream-a2vkwefh-pooler.eu-central-1.aws.neon.tech:5432/verceldb?sslmode=require&pgbouncer=true&connect_timeout=15"
-POSTGRES_URL_NON_POOLING="postgres://default:QHqji86FATgc@ep-mute-dream-a2vkwefh.eu-central-1.aws.neon.tech:5432/verceldb?sslmode=require"
+DATABASE_URL="postgres://neondb_owner:3npiGACLK4cy@ep-hidden-water-a2k7vqel-pooler.eu-central-1.aws.neon.tech/neondb?sslmode=require"
+POSTGRES_URL_NON_POOLING="postgresql://neondb_owner:3npiGACLK4cy@ep-hidden-water-a2k7vqel.eu-central-1.aws.neon.tech/neondb?sslmode=require"
