--- a/src/back/courier-service/.env
+++ b/src/back/courier-service/.env
@@ -1,6 +1,6 @@
-APP_NAME=Laravel
+APP_NAME=DeliveryProject
 APP_ENV=local
-APP_KEY=
+APP_KEY=base64:RtpGkdZhimecWvFs5PGsycvcQSpXoh6Jh0II9W3fMyw=
 APP_DEBUG=true
 APP_TIMEZONE=UTC
 APP_URL=http://localhost
